[project]
name = "llm-base"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "nvitop>=1.6.0",
    "pandas>=2.3.3",
    "pyarrow>=24.0.0",
    "tensorboard>=2.20.0",
    "torch>=2.9.1",
    "transformers>=4.57.3",
]
